--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,7 +14,7 @@ jobs:
         architecture: [x86, x64]
 
     env:
-      PRESET_NAME: ${{ RUNNER_OS }}-${{ matrix.architecture }}-${{ matrix.build_type }}
+      PRESET_NAME: ${{ runner.os }}-${{ matrix.architecture }}-${{ matrix.build_type }}
 
     steps:
     - uses: actions/checkout@v4
