--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,7 @@ project(MysteriesOfDarkness)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+include_directories(.)
+
+add_subdirectory(Engine)
